monitoring/k8s/ingress-route-alertmanager.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-alertmanager
  routes:
    - match: Host(`alertmanager.env0.luojm.com`) 
      kind: Rule
      services:
      - name: alertmanager-main
        kind: Service
        namespace: monitoring
        port: 9093
      middlewares:
        - name: auth
